# dserver-minimal

./: .gitignore  CHANGELOG.rst  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: containers.yml  documentation.yml  generic-container-image-publication.yml  paper.yml  publish-container-image.yml  publish-python-package.yml
devel/: README.md  init.sh
docker/: README.md  devel.yml
docker/compose/dtool_lookup_webapp/: Dockerfile  build-node-app.sh
docker/compose/dtool_lookup_webapp/docker-entrypoint.d/: 40-build-node-app.sh
docker/dserver_devel/: Dockerfile  boot.sh
docker/envs/: dtool_lookup_webapp
docker/single-container/: Dockerfile  dtool.json  dtool_lookup_webapp.env  nginx.conf  prepare-dserver.sh  requirements.txt  supervisord.conf  webapp.env
docker/single-container/docker-entrypoint.d/: 30-run-postgres-mongo.sh  50-prepare-dserver.sh
docker/single-container/dtool-templates/: dtool.json
docker/single-container/nginx-templates/: default.conf.template
docker/volumes/: README
docker/volumes/redundant/config_dtool/: dtool.json
docker/volumes/redundant/dtool_config_generator/: production.cfg
docker/volumes/redundant/dtool_config_generator/templates/: dtool.json
docker/volumes/redundant/web/: README
docker/volumes/redundant/web/templates/: default.conf.template
docker/volumes/webapp/dtool-templates/: dtool.json
docker/volumes/webapp/nginx-templates/: default.conf.template
docs/: conf.py  index.rst  story_dtool.rst
dserver_minimal/: __init__.py
(+596 files in other folders)
